--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verificador de Palindromo</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Verificador de Palindromo</h1>
-    <div class="container">
-        <label for="palavra">Digite uma palavra</label>
-        <input type="text" name="palavra" id="palavra">
-        <button id="botao-verificar">Verificar</button>
-        <p id="resultado"></p>
+    <h1 class="roboto-bold">Verificador de Palindromo</h1>
+    <div class="container roboto-medium">
+        <label for="palavra roboto-regular">Digite uma palavra</label>
+        <input type="text" name="palavra" id="palavra" class="roboto-light">
+        <button id="botao-verificar roboto-thin">Verificar</button>
+        <p id="resultado" class="roboto-thin"></p>
     </div>
 </body>
 </html>
